src/dash-table/components/Table/Table.less
.inset-shadow(@color, @left, @top, @right, @bottom) {
    box-shadow: inset @left 0px 0px 0px @color,
        inset 0px @top 0px 0px @color,
        inset @right 0px 0px @color,
        inset 0px @bottom 0px 0px @color;
}

.outline-shadow(@color, @left, @top, @right, @bottom) {
    box-shadow: @left 0px 0px 0px @color,
        0px @top 0px 0px @color,
        @right 0px 0px @color,
        0px @bottom 0px 0px @color;
}

.dash-spreadsheet-container {
    position: relative;
}

.dash-spreadsheet {
    box-sizing: border-box;

    // freeze columns
    &.freeze-left {
        overflow-x: scroll;

        .frozen-left {
            position: absolute;
            z-index: 1000;
            left: 0;
        }
    }

    // freeze rows
    &.freeze-top {
        overflow-y: auto;
        height: 500px;

        table {
            width: 0 !important;
        }

        .frozen-top {
            position: absolute;
            top: 0;
            left: 0;
            z-index: 2000;
        }
    }

    *,
    *:after,
    *:before {
        box-sizing: inherit;
    }

    .Select {
        position: static;
    }

    .marker-row {
        tr {
            visibility: hidden !important;
        }

        td, th {
            height: 0 !important;
            padding: 0 !important;
            margin: 0 !important;
        }
    }

    table {
        table-layout: fixed;
    }

    // cell border styling
    tbody {
        tr {
            td, th {
                .inset-shadow(var(--border), 1px, 0px, 0px, -1px);

                &.focused + td {
                    .inset-shadow(var(--border), 0px, 0px, 0px, -1px);
                }

                &:last-of-type {
                    .inset-shadow(var(--border), 1px, 0px, -1px, -1px);
                }
            }
        }

        &:first-of-type {
            tr:first-of-type {
                td, th {
                    .inset-shadow(var(--border), 1px, 1px, 0px, -1px);

                    &:last-of-type {
                        .inset-shadow(var(--border), 1px, 1px, -1px, -1px);
                    }
                }
            }
        }
    }

    .selected-row {
        td, th {
            background-color: var(--selected-row);
        }
    }

    td {
        background-color: white;

        &.cell--selected {
            background-color: var(--selected-background);
        }

        &.focused {
            // .shadow(red, 1px, 1px, 0, 0);
            .outline-shadow(var(--accent), 1px, 1px, 0, 0);
            border: 1px solid var(--accent);
            margin: -1px;
            z-index: 500;
        }
    }

    // cell content styling
    td, th {
        padding-left: 2px;
        padding-right: 2px;
        padding-bottom: 2px;
        padding-top: 2px;
        white-space: nowrap;
        overflow-x: hidden;
        text-overflow: ellipsis;

        height: 30px;
        line-height: 30px;

        text-align: right;
    }
}

.dash-spreadsheet textarea {
    white-space: pre;
}

.dash-spreadsheet table {
    border-collapse: collapse;

    font-family: monospace;
    --accent: hotpink;
    --border: lightgrey;
    --text-color: rgb(60, 60, 60);
    --hover: rgb(253, 253, 253);
    --background-color-ellipses: rgb(253, 253, 253);
    --faded-text: rgb(250, 250, 250);
    --faded-text-header: rgb(180, 180, 180);
    --selected-background: rgba(255, 65, 54, 0.2);
    --faded-dropdown: rgb(240, 240, 240);
    --selected-row: #fff0ff;
    --muted: rgb(200, 200, 200);
}

/* focus happens after copying to clipboard */
.dash-spreadsheet table:focus {
    outline: none;
}

.dash-spreadsheet thead {
    display: table-row-group;
}

.elip {
    text-align: center;
    width: 100%;
    background-color: var(--background-color-ellipses);
}

.dash-spreadsheet td.dropdown {
    /*
     * To view the dropdown's contents, we need
     * overflow-y: visible.
     * Unfortunately, overflow-x: hidden and overflow-y: visible
     * can't both be set at the same time.
     * So, we have to make both overflow-x: visible and overflow-y: visble
     *
     * See https://stackoverflow.com/questions/6421966/
     *
     * There might be another solution with parent divs, but I haven't
     * tried it.
     */
    overflow-x: visible;
}

.dash-spreadsheet th {
    box-shadow: inset 1px 0px 0px 0px var(--border),
        inset 0px 1px 0px 0px var(--border);
}

.dash-spreadsheet :not(.cell--selected) tr:hover,
tr:hover input :not(.cell--selected) {
    background-color: var(--hover);
}

.dash-spreadsheet th {
    background-color: rgb(250, 250, 250);
}

.expanded-row--empty-cell {
    box-shadow: none;
    background-color: transparent;
}

.expanded-row {
    text-align: center;
}

.dash-spreadsheet input:not([type=radio]):not([type=checkbox]) {
    padding: 0px;
    margin: 0px;
    height: calc(100% - 1px);
    width: calc(100% - 1px); /* to account for box-shadow */
    line-height: 30px;
    border: none;
    font-family: inherit;
    text-align: right;
    box-sizing: border-box;
    color: var(--text-color);
    background-color: transparent; /* so as to not overlay the box shadow */
}

.dash-spreadsheet input.unfocused {
    color: transparent;
    text-shadow: 0 0 0 var(--text-color);
    cursor: default;
}

.dash-spreadsheet input.unfocused:focus {
    outline: none;
}

.numeric {
    font-family: monospace;
}

.toggle-row {
    border: none;
    box-shadow: none;
    width: 10px;
    padding-left: 10px;
    padding-right: 10px;
    cursor: pointer;
    color: var(--faded-text);
}

.toggle-row--expanded {
    color: var(--accent);
}

.dash-spreadsheet tr:hover .toggle-row {
    color: var(--accent);
}

.cell--uneditable,
.cell--uneditable input {
    cursor: not-allowed;
}

.expanded-row {
    box-shadow: inset 2px 0px 0px 0px var(--accent),
        inset -1px 0px 0px 0px var(--border);
    /* inset 0px 1px 0px 0px var(--border); */
}

.filter {
    cursor: pointer;
    float: left;
    color: var(--faded-text-header);
    font-size: 20px;
}
th:hover .filter {
    color: var(--accent);
}
.filter:hover {
    text-decoration: underline;
}

.dash-spreadsheet .delete-cell {
    font-size: 1.3rem;
    text-align: center;
    cursor: pointer;
    color: var(--muted);
}
.dash-spreadsheet .delete-cell:hover {
    color: var(--accent);
}

